...
                modifier = Modifier.testTag(PROVIDER_BOTTOM_BAR_ITEM_PREFIX + destination.route),
            )
        }
    }
}

const val PROVIDER_BOTTOM_BAR_TAG = "provider-bottom-bar"
const val PROVIDER_BOTTOM_BAR_ITEM_PREFIX = "provider-bottom-bar-item-"

